syntax = "proto3";
package poktroll.application;

option go_package = "github.com/pokt-network/poktroll/x/application/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message Application {
  string address = 1; 
  cosmos.base.v1beta1.Coin stake = 2 [(gogoproto.nullable) = false]; 
  repeated string serviceConfigs = 3; 
  repeated string delegateeGatewayAddresses = 4; 
  
}

